--- a/project.ipynb
+++ b/project.ipynb
@@ -32,12 +32,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Install the necesary libraries\n",
     "!pip -q install tensorflow\n",
-    "\n",
     "!pip -q install ISR gdown\n",
     "\n",
     "import os\n",
     "if not os.path.exists('weights/rrdn-C4-D3-G32-G032-T10-x4_epoch299.hdf'):\n",
+    "\n",
     "  # download pretrained weights\n",
     "  import os\n",
     "  github_weights_url = 'https://github.com/AwaleSajil/ISR_weights'\n",
@@ -49,7 +50,7 @@
     "!git clone https://github.com/AwaleSajil/ISR-Youtube-\n",
     "a = !pip install https://raw.githubusercontent.com/AwaleSajil/ghc/master/ghc-1.0-py3-none-any.whl\n",
     "\n",
-    "\n",
+    "#Import the models set by the library\n",
     "from ISR.models import RDN, RRDN\n",
     "import numpy as np\n",
     "from PIL import Image\n",
@@ -59,6 +60,7 @@
     "from ghc.l_ghc_cf import l_ghc_cf\n",
     "%cd content\n",
     "\n",
+    "#Set the params of the models\n",
     "rrdn_gans = RRDN(arch_params={'C': 4, 'D':3, 'G':32, 'G0':32, 'x':4, 'T': 10})\n",
     "rrdn_gans.model.load_weights('weights/rrdn-C4-D3-G32-G032-T10-x4_epoch299.hdf5')\n",
     "\n",
@@ -71,9 +73,10 @@
     "large_noise_cancelling_rdn = RDN(arch_params={'C': 6, 'D':20, 'G':64, 'G0':64, 'x':2})\n",
     "large_noise_cancelling_rdn.model.load_weights('weights/rdn-C6-D20-G64-G064-x2_ArtefactCancelling_epoch219.hdf5')\n",
     "\n",
+    "#Clear output and be done with the configuration\n",
     "from IPython.display import clear_output\n",
     "clear_output()\n",
-    "print(\"Configuración terminaada\")"
+    "print(\"Configuración terminada\")"
    ]
   }
  ]
