--- a/project.ipynb
+++ b/project.ipynb
@@ -78,6 +78,79 @@
     "clear_output()\n",
     "print(\"Configuración terminada\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Set the execution of the model\n",
+    "\n",
+    "#choose the model to use\n",
+    "choice_model = 'RDN noise cancelling (C6-D20-G64-G064-x2_ArtefactCancelling_epoch219)'\n",
+    "\n",
+    "#Set the image to use\n",
+    "imageURL__or__pathToImage = 'https://pbs.twimg.com/profile_images/378800000767857170/ed069028bd123bdbe69530f770670eef.jpeg' #@param {type:\"string\"}\n",
+    "\n",
+    "sourceImg = None\n",
+    "def path_leaf(path):\n",
+    "  import ntpath\n",
+    "  head, tail = ntpath.split(path)\n",
+    "  return tail or ntpath.basename(head)\n",
+    "\n",
+    "try:\n",
+    "  fname = path_leaf(imageURL__or__pathToImage)\n",
+    "  sourceImg = Image.open(fname)\n",
+    "except FileNotFoundError:\n",
+    "  !curl $imageURL__or__pathToImage > 'img.png'\n",
+    "  fname = 'img.png'\n",
+    "  sourceImg = Image.open(fname)\n",
+    "except:\n",
+    "  raise Exception(\"Image address is incorrect\")\n",
+    "\n",
+    "\n",
+    "if choice_model == 'RRDN GANS (C4-D3-G32-G032-T10-x4_epoch299)':\n",
+    "  sr_img = rrdn_gans.predict(np.array(sourceImg))\n",
+    "\n",
+    "elif choice_model == 'Large RDN (C6-D20-G64-G064-x2_PSNR_epoch086)':\n",
+    "  sr_img = large_rdn.predict(np.array(sourceImg))\n",
+    "\n",
+    "elif choice_model == 'Small RDN (C3-D10-G64-G064-x2_PSNR_epoch134)':\n",
+    "  sr_img = small_rdn.predict(np.array(sourceImg))\n",
+    "\n",
+    "else:\n",
+    "  sr_img = large_noise_cancelling_rdn.predict(np.array(sourceImg))\n",
+    "\n",
+    "# Image.fromarray(sr_img)\n",
+    "\n",
+    "\n",
+    "result_img = Image.fromarray(sr_img)\n",
+    "result_img.save(\"/content/result.png\")\n",
+    "\n",
+    "resizedOriginal = sourceImg.resize(size=(result_img.size[0], result_img.size[1]), resample=Image.BICUBIC)\n",
+    "resizedOriginal.save(\"/content/original.png\")\n",
+    "\n",
+    "!cp '/content/result.png' '/usr/local/share/jupyter/nbextensions/result.png'\n",
+    "!cp '/content/original.png' '/usr/local/share/jupyter/nbextensions/original.png'\n",
+    "\n",
+    "width, height = result_img.size\n",
+    "\n",
+    "import time\n",
+    "from IPython.display import clear_output\n",
+    "\n",
+    "\n",
+    "with open('/content/ISR-Youtube-/index.html','r') as file:\n",
+    "    htm = file.read()\n",
+    "\n",
+    "time.sleep(1)\n",
+    "html_code = htm.format(width, height)\n",
+    "print()\n",
+    "print(\"Original Image (scaled to match output res)\")\n",
+    "display(Image.open('/content/original.png'))\n",
+    "print(\"Result\")\n",
+    "display(Image.open('/content/result.png'))"
+   ]
   }
  ]
 }
