--- a/Project/project.ipynb
+++ b/Project/project.ipynb
@@ -35,6 +35,7 @@
     "#Install the necesary libraries\n",
     "!pip -q install tensorflow\n",
     "!pip -q install ISR gdown\n",
+    "!pip install https://raw.githubusercontent.com/AwaleSajil/ghc/master/ghc-1.0-py3-none-any.whl\n",
     "\n",
     "import os\n",
     "if not os.path.exists('weights/rrdn-C4-D3-G32-G032-T10-x4_epoch299.hdf'):\n",
@@ -48,7 +49,7 @@
     "  \n",
     "#Clone the repositories we are going to use\n",
     "!git clone https://github.com/AwaleSajil/ISR-Youtube-\n",
-    "a = !pip install https://raw.githubusercontent.com/AwaleSajil/ghc/master/ghc-1.0-py3-none-any.whl\n",
+    "\n",
     "\n",
     "#Import the models set by the library\n",
     "from ISR.models import RDN, RRDN\n",
@@ -91,7 +92,7 @@
     "choice_model = 'RDN noise cancelling (C6-D20-G64-G064-x2_ArtefactCancelling_epoch219)'\n",
     "\n",
     "#Set the image to use\n",
-    "imageURL__or__pathToImage = 'https://pbs.twimg.com/profile_images/378800000767857170/ed069028bd123bdbe69530f770670eef.jpeg' #@param {type:\"string\"}\n",
+    "imageURL__or__pathToImage = '/content/2.jpg' #@param {type:\"string\"}\n",
     "\n",
     "sourceImg = None\n",
     "def path_leaf(path):\n",
@@ -109,30 +110,20 @@
     "except:\n",
     "  raise Exception(\"Image address is incorrect\")\n",
     "\n",
+    "#Set the image\n",
+    "sr_img = large_noise_cancelling_rdn.predict(np.array(sourceImg))\n",
+    "Image.fromarray(sr_img)\n",
     "\n",
-    "if choice_model == 'RRDN GANS (C4-D3-G32-G032-T10-x4_epoch299)':\n",
-    "  sr_img = rrdn_gans.predict(np.array(sourceImg))\n",
-    "\n",
-    "elif choice_model == 'Large RDN (C6-D20-G64-G064-x2_PSNR_epoch086)':\n",
-    "  sr_img = large_rdn.predict(np.array(sourceImg))\n",
-    "\n",
-    "elif choice_model == 'Small RDN (C3-D10-G64-G064-x2_PSNR_epoch134)':\n",
-    "  sr_img = small_rdn.predict(np.array(sourceImg))\n",
-    "\n",
-    "else:\n",
-    "  sr_img = large_noise_cancelling_rdn.predict(np.array(sourceImg))\n",
-    "\n",
-    "# Image.fromarray(sr_img)\n",
-    "\n",
-    "\n",
+    "#Set the result image\n",
     "result_img = Image.fromarray(sr_img)\n",
-    "result_img.save(\"/content/result.png\")\n",
+    "result_img.save(\"/content/Resultados/result.png\")\n",
     "\n",
+    "#Set the original image\n",
     "resizedOriginal = sourceImg.resize(size=(result_img.size[0], result_img.size[1]), resample=Image.BICUBIC)\n",
-    "resizedOriginal.save(\"/content/original.png\")\n",
+    "resizedOriginal.save(\"/content/Resultados/original.png\")\n",
     "\n",
-    "!cp '/content/result.png' '/usr/local/share/jupyter/nbextensions/result.png'\n",
-    "!cp '/content/original.png' '/usr/local/share/jupyter/nbextensions/original.png'\n",
+    "!cp '/content/Resultados/result.png' '/usr/local/share/jupyter/nbextensions/result.png'\n",
+    "!cp '/content/Resultados/original.png' '/usr/local/share/jupyter/nbextensions/Resultados/original.png'\n",
     "\n",
     "width, height = result_img.size\n",
     "\n",
@@ -145,11 +136,7 @@
     "\n",
     "time.sleep(1)\n",
     "html_code = htm.format(width, height)\n",
-    "print()\n",
-    "print(\"Original Image (scaled to match output res)\")\n",
-    "display(Image.open('/content/original.png'))\n",
-    "print(\"Result\")\n",
-    "display(Image.open('/content/result.png'))"
+    "display(IPython.display.HTML(html_code))"
    ]
   }
  ]
