--- a/Project/project.ipynb
+++ b/Project/project.ipynb
@@ -92,7 +92,7 @@
     "choice_model = 'RDN noise cancelling (C6-D20-G64-G064-x2_ArtefactCancelling_epoch219)'\n",
     "\n",
     "#Set the image to use\n",
-    "imageURL__or__pathToImage = '/content/2.jpg' #@param {type:\"string\"}\n",
+    "imageURL__or__pathToImage = 'https://www.laneros.com/attachments/cx-jpg.91527/' #@param {type:\"string\"}\n",
     "\n",
     "sourceImg = None\n",
     "def path_leaf(path):\n",
@@ -123,7 +123,7 @@
     "resizedOriginal.save(\"/content/Resultados/original.png\")\n",
     "\n",
     "!cp '/content/Resultados/result.png' '/usr/local/share/jupyter/nbextensions/result.png'\n",
-    "!cp '/content/Resultados/original.png' '/usr/local/share/jupyter/nbextensions/Resultados/original.png'\n",
+    "!cp '/content/Resultados/original.png' '/usr/local/share/jupyter/nbextensions/original.png'\n",
     "\n",
     "width, height = result_img.size\n",
     "\n",
