--- a/Project/project.ipynb
+++ b/Project/project.ipynb
@@ -138,6 +138,20 @@
     "html_code = htm.format(width, height)\n",
     "display(IPython.display.HTML(html_code))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "html_code = htm.format(width, height)\n",
+    "print()\n",
+    "print(\"Imagen original\")\n",
+    "display(Image.open('/content/Resultados/original.png'))\n",
+    "print(\"Resultado\")\n",
+    "display(Image.open('/content/Resultados/result.png'))"
+   ]
   }
  ]
 }
